// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconPrint /> DOM element add "id" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id="hasId"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M222 95h-23V69.7L170.6 46H61c-1.7 0-3 1.3-3 3v46H34v93h22v21.3c0 1.5 1.2 2.7 2.7 2.7h137.6c1.5 0 2.7-1.2 2.7-2.7V188h23V95zM66 53h101.7L191 72.8V95H66V53zm126 151H65v-39h127v39zm6.5-77c-7.7 5.9-16.4-2.8-10.5-10.5 7.7-5.9 16.4 2.8 10.5 10.5z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconPrint /> DOM element add "id" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconPrint /> DOM element add "onClick" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id={[Function]}
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M222 95h-23V69.7L170.6 46H61c-1.7 0-3 1.3-3 3v46H34v93h22v21.3c0 1.5 1.2 2.7 2.7 2.7h137.6c1.5 0 2.7-1.2 2.7-2.7V188h23V95zM66 53h101.7L191 72.8V95H66V53zm126 151H65v-39h127v39zm6.5-77c-7.7 5.9-16.4-2.8-10.5-10.5 7.7-5.9 16.4 2.8 10.5 10.5z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconPrint /> DOM element add "onClick" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconPrint /> DOM element pass attributes defined in the "attrs" prop to the DOM element 1`] = `
<div>
  <svg
    aria-hidden={true}
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M222 95h-23V69.7L170.6 46H61c-1.7 0-3 1.3-3 3v46H34v93h22v21.3c0 1.5 1.2 2.7 2.7 2.7h137.6c1.5 0 2.7-1.2 2.7-2.7V188h23V95zM66 53h101.7L191 72.8V95H66V53zm126 151H65v-39h127v39zm6.5-77c-7.7 5.9-16.4-2.8-10.5-10.5 7.7-5.9 16.4 2.8 10.5 10.5z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconPrint /> DOM element pass attributes defined in the "attrs" prop to the DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconPrint /> DOM element render correctly when no props are passed 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M222 95h-23V69.7L170.6 46H61c-1.7 0-3 1.3-3 3v46H34v93h22v21.3c0 1.5 1.2 2.7 2.7 2.7h137.6c1.5 0 2.7-1.2 2.7-2.7V188h23V95zM66 53h101.7L191 72.8V95H66V53zm126 151H65v-39h127v39zm6.5-77c-7.7 5.9-16.4-2.8-10.5-10.5 7.7-5.9 16.4 2.8 10.5 10.5z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconPrint /> DOM element render correctly when no props are passed 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconPrint /> styles responsively set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M222 95h-23V69.7L170.6 46H61c-1.7 0-3 1.3-3 3v46H34v93h22v21.3c0 1.5 1.2 2.7 2.7 2.7h137.6c1.5 0 2.7-1.2 2.7-2.7V188h23V95zM66 53h101.7L191 72.8V95H66V53zm126 151H65v-39h127v39zm6.5-77c-7.7 5.9-16.4-2.8-10.5-10.5 7.7-5.9 16.4 2.8 10.5 10.5z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconPrint /> styles responsively set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{position:relative}}@media (min-width: 80em){.htz-e{position:static}}"`;

exports[`<IconPrint /> styles set icon's color 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M222 95h-23V69.7L170.6 46H61c-1.7 0-3 1.3-3 3v46H34v93h22v21.3c0 1.5 1.2 2.7 2.7 2.7h137.6c1.5 0 2.7-1.2 2.7-2.7V188h23V95zM66 53h101.7L191 72.8V95H66V53zm126 151H65v-39h127v39zm6.5-77c-7.7 5.9-16.4-2.8-10.5-10.5 7.7-5.9 16.4 2.8 10.5 10.5z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconPrint /> styles set icon's color 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:#0B7EB5}.htz-c{fill:#FFF}"`;

exports[`<IconPrint /> styles set icon's color responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M222 95h-23V69.7L170.6 46H61c-1.7 0-3 1.3-3 3v46H34v93h22v21.3c0 1.5 1.2 2.7 2.7 2.7h137.6c1.5 0 2.7-1.2 2.7-2.7V188h23V95zM66 53h101.7L191 72.8V95H66V53zm126 151H65v-39h127v39zm6.5-77c-7.7 5.9-16.4-2.8-10.5-10.5 7.7-5.9 16.4 2.8 10.5 10.5z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconPrint /> styles set icon's color responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-d{fill:#FFF}@media (max-width: 79.9375em){.htz-b{color:#0B7EB5}}@media (min-width: 80em){.htz-c{color:#2D2D2D}}"`;

exports[`<IconPrint /> styles set icon's fill 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M222 95h-23V69.7L170.6 46H61c-1.7 0-3 1.3-3 3v46H34v93h22v21.3c0 1.5 1.2 2.7 2.7 2.7h137.6c1.5 0 2.7-1.2 2.7-2.7V188h23V95zM66 53h101.7L191 72.8V95H66V53zm126 151H65v-39h127v39zm6.5-77c-7.7 5.9-16.4-2.8-10.5-10.5 7.7-5.9 16.4 2.8 10.5 10.5z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconPrint /> styles set icon's fill 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#0B7EB5}"`;

exports[`<IconPrint /> styles set icon's fill responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M222 95h-23V69.7L170.6 46H61c-1.7 0-3 1.3-3 3v46H34v93h22v21.3c0 1.5 1.2 2.7 2.7 2.7h137.6c1.5 0 2.7-1.2 2.7-2.7V188h23V95zM66 53h101.7L191 72.8V95H66V53zm126 151H65v-39h127v39zm6.5-77c-7.7 5.9-16.4-2.8-10.5-10.5 7.7-5.9 16.4 2.8 10.5 10.5z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconPrint /> styles set icon's fill responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}@media (max-width: 79.9375em){.htz-c{fill:#0B7EB5}}@media (min-width: 80em){.htz-d{fill:#2D2D2D}}"`;

exports[`<IconPrint /> styles set icon's size 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M222 95h-23V69.7L170.6 46H61c-1.7 0-3 1.3-3 3v46H34v93h22v21.3c0 1.5 1.2 2.7 2.7 2.7h137.6c1.5 0 2.7-1.2 2.7-2.7V188h23V95zM66 53h101.7L191 72.8V95H66V53zm126 151H65v-39h127v39zm6.5-77c-7.7 5.9-16.4-2.8-10.5-10.5 7.7-5.9 16.4 2.8 10.5 10.5z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconPrint /> styles set icon's size 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{font-size:6rem}"`;

exports[`<IconPrint /> styles set icon's size responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M222 95h-23V69.7L170.6 46H61c-1.7 0-3 1.3-3 3v46H34v93h22v21.3c0 1.5 1.2 2.7 2.7 2.7h137.6c1.5 0 2.7-1.2 2.7-2.7V188h23V95zM66 53h101.7L191 72.8V95H66V53zm126 151H65v-39h127v39zm6.5-77c-7.7 5.9-16.4-2.8-10.5-10.5 7.7-5.9 16.4 2.8 10.5 10.5z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconPrint /> styles set icon's size responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{font-size:6rem}}@media (min-width: 80em){.htz-e{font-size:7rem}}"`;

exports[`<IconPrint /> styles set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M222 95h-23V69.7L170.6 46H61c-1.7 0-3 1.3-3 3v46H34v93h22v21.3c0 1.5 1.2 2.7 2.7 2.7h137.6c1.5 0 2.7-1.2 2.7-2.7V188h23V95zM66 53h101.7L191 72.8V95H66V53zm126 151H65v-39h127v39zm6.5-77c-7.7 5.9-16.4-2.8-10.5-10.5 7.7-5.9 16.4 2.8 10.5 10.5z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconPrint /> styles set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{position:relative}"`;
